Complete the task and fix errors